--- a/css/a_style.css
+++ b/css/a_style.css
@@ -108,6 +108,10 @@ a{text-decoration:none;color:inherit;outline:0!important}
     position: absolute;
     top: 20.9%;
     width: 100%;
+    height: 400px;
+    z-index: -1;
+    opacity: 0;
+    transition: all 0.25s;
 }
 .sec {
     background: white;
@@ -185,14 +189,17 @@ a{text-decoration:none;color:inherit;outline:0!important}
     letter-spacing: 0px;
     box-sizing: border-box;
     vertical-align: top;
+    transition: color 0.25s, background 0.25s;
 }
 .btn_gr a:hover{
     background: url(../img/bg_btn.png)no-repeat top center;
     background-size: cover;
     color: white;
-    border: none;
-    line-height: 76px;
-    
+    border: 0px solid transparent;
+    line-height: 78px;
+}
+.back:hover{
+    color: #00B1F7;
 }
 .back {
     text-transform: uppercase;
@@ -200,8 +207,8 @@ a{text-decoration:none;color:inherit;outline:0!important}
     position: absolute;
     bottom: 25px;
     font-size: 18px;
-    left: 32px
-    
+    left: 32px;
+    transition: all 0.25s;
 }
 .block footer{
     position: absolute;
@@ -496,4 +503,8 @@ form button:hover{
     font-size: 15px;
     color: #c4c4c4;
     margin-top: 29px
+}
+.sec.active{
+    opacity: 1;
+    z-index: 1;
 }
