--- a/css/a_style.css
+++ b/css/a_style.css
@@ -55,13 +55,14 @@ a{text-decoration:none;color:inherit;outline:0!important}
     background: url(../img/bg_bg.png)no-repeat bottom -368px right -261px #1b1b1b;
     position: relative;
     width: 100%;
-    min-height: 719px;
+    /* min-height: 719px; */
     height: 100vh;
 }
 .block header {
     position: relative;
-    top: 6.1%;
+    top: 9.1%;
     width: 100%;
+    transform: translateY(-50%);
 }
 .logo {
     background: url(../img/logo.png)no-repeat top center;
@@ -98,29 +99,86 @@ a{text-decoration:none;color:inherit;outline:0!important}
     top: 35px;
     position: absolute;
 }
-.opros span {
+.opros span:not(#step-data) {
     display: block;
     margin-top: 22px;
     font-size: 22px;
     letter-spacing: 0.1px
 }
+.sec.disactive{
+    transform: translateX(-100%)!important;
+}
+.fact.disactive{
+    transform: translateY(100%)!important;
+}
+
 .block .sec {
     position: absolute;
-    top: 20.9%;
+    top: 0;
     width: 100%;
     height: 400px;
     z-index: -1;
     opacity: 0;
-    transition: all 0.25s;
+    transition: all 0.35s ease-in-out;
+    transform: translateX(100%);
+}
+.etaps{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 400px;
+    left: 0;
+    z-index: -1;
+    opacity: 0;
+    transition: all 0.35s ease-in-out;
+    transform: translateY(100%);
+}
+.etap[data-etap="0"]{
+    transform: translateX(0);
+    opacity: 1;
+}
+.etap{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 400px;
+    left: 0;
+    z-index: -1;
+    opacity: 0;
+    transition: all 0.35s ease-in-out;
+    transform: translateX(100%);
+}
+.etap.active{
+    transform: translateX(0);
+    opacity: 1;
+}
+.etap.disactive{
+    transform: translateX(-100%);
+}
+.etaps.active{
+    transform: translateY(0);
+    opacity: 1;
+}
+.etaps[data-etap="1"] .line .point{
+    margin-left: 0;
+}
+.etaps[data-etap="2"] .line .point{
+    margin-left: 392.5px;
+}
+.etaps[data-etap="3"] .line .point{
+    margin-left: 785px;
+}
+.etaps.disactive{
+    transform: translateY(-100%);
 }
 .sec {
     background: white;
     min-height: 250px;
     position: relative;
-    -webkit-box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 1);
+    /* -webkit-box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 1); */
     -moz-box-shadow:    0px 0px 10px 0px rgba(50, 50, 50, 1);
-    box-shadow:         0px 0px 10px 0px rgba(50, 50, 50, 1);
-    padding:  33px
+    /* box-shadow:         0px 0px 10px 0px rgba(50, 50, 50, 1); */
+    padding:  33px;
 }
 .block .sec_n {
     position: absolute;
@@ -137,15 +195,44 @@ a{text-decoration:none;color:inherit;outline:0!important}
     box-shadow:         0px 0px 10px 0px rgba(50, 50, 50, 1);
     padding:  33px
 }
-.sec:after {
+#opros-wrap[data-step="1"]:before{width:12.5%}
+#opros-wrap[data-step="2"]:before{width:25%}
+#opros-wrap[data-step="3"]:before{width:37.5%}
+#opros-wrap[data-step="4"]:before{width:50%}
+#opros-wrap[data-step="5"]:before{width:62.5%}
+#opros-wrap[data-step="6"]:before{width:75%}
+#opros-wrap[data-step="7"]:before{width: 87.5%;}
+#opros-wrap[data-step="8"]:before{width:100%}
+#opros-wrap:before {
     content: "";
-    width: 135px;
+    /* width: 135px; */
     height: 4px;
     background: #60c7f9;
     position: absolute;
     top: 0px;
     left: 0px;
-    
+    z-index: 2;
+    transition: all 0.35s ease-in-out;
+}
+.facts{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+}
+.fact{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 400px;
+    z-index: -1;
+    opacity: 0;
+    transition: all 0.35s ease-in-out;
+    transform: translateY(-100%);
+}
+.sec[data-step="8"] h2:not(.fo){
+    min-height: initial;
 }
 .sec h2 {
     font-size: 26px;
@@ -155,6 +242,10 @@ a{text-decoration:none;color:inherit;outline:0!important}
     letter-spacing: 0.1px;
     min-height: 68px;
     padding: 0px 40px;
+}
+.etap .et{
+    opacity: 0;
+    margin-bottom: 30px;
 }
 .sec_n h2 {
     font-size: 26px;
@@ -171,6 +262,11 @@ a{text-decoration:none;color:inherit;outline:0!important}
     word-spacing: 4px;
     margin-top: 20px;
     margin-bottom: 30px;
+    position: absolute;
+    left: 0;
+    padding: 0 25px;
+    /* bottom: 10px; */
+    width: 100%;
 }
 .btn_gr a{
     border: 5px solid #00abff;
@@ -209,11 +305,13 @@ a{text-decoration:none;color:inherit;outline:0!important}
     font-size: 18px;
     left: 32px;
     transition: all 0.25s;
+    /* left: 50%; */
 }
 .block footer{
     position: absolute;
-    bottom: 13.5%;
+    bottom: 4.5%;
     width: 100%;
+    transform: translateY(50%);
 }
 footer p {
     color: #525252;
@@ -286,6 +384,8 @@ footer p {
     display: inline-block;
     width: 836px;
     cursor: pointer;
+    position: relative;
+    top: 82px;
 }
 
 .point {
@@ -293,6 +393,7 @@ footer p {
     width: 51px;
     height: 51px;
     cursor: pointer;
+    transition: all 0.35s;
 }
 .et_l h3 {
     color: #00b1f7;
@@ -362,9 +463,10 @@ form {
     text-align: center;
 }
 form input {
-    background: url(../img/input.png)no-repeat center;
+    background: #fff url(../img/input.png)no-repeat center;
     width: 255px;
     height: 81px;
+    transition: all 0.25s;
     outline: none;
     border: none;
     display: inline-block;
@@ -374,6 +476,9 @@ form input {
     color:black;
     text-align: center;
     padding: 0px 15px;
+}
+.error-input{
+    background: #FFD6D6 url(../img/input.png)no-repeat center;
 }
 form button{
     border: 5px solid #00abff;
@@ -393,6 +498,7 @@ form button{
     box-sizing: border-box;
     vertical-align: top;
     background: white;
+    transition: color 0.25s, background 0.25s;
 }
 form button:hover{
     background: url(../img/bg_btn.png)no-repeat top center;
@@ -507,4 +613,63 @@ form button:hover{
 .sec.active{
     opacity: 1;
     z-index: 1;
+    transform: translateX(0);
+}
+.fact.active{
+    opacity: 1;
+    z-index: 1;
+    transform: translateY(0);
+}
+.fins[data-fins="1"]{
+    padding-top: 90px;
+}
+.fins[data-fins="2"]{
+    padding-top: 60px;
+}
+.fins.active{
+    opacity: 1;
+    z-index: 1;
+    transform: translateY(0);
+}
+.fins.disactive{
+    transform: translateY(100%);
+}
+.fins{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 400px;
+    z-index: -1;
+    opacity: 0;
+    left: 0;
+    transition: all 0.35s ease-in-out;
+    transform: translateY(-100%);
+}
+.okgo.active{
+    transform: translateY(0);
+    opacity: 1;
+}
+.okgo{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 400px;
+    z-index: -1;
+    opacity: 0;
+    padding-top: 140px;
+    left: 0;
+    transition: all 0.35s ease-in-out;
+    transform: translateY(100%);
+}
+#opros-wrap{
+    height: 400px;
+    position: absolute;
+    top: 54%;
+    transform: translateY(-50%);
+    width: 100%;
+    background: rgb(255, 255, 255);
+    overflow: hidden;
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 1);
+    -moz-box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 1);
+    box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 1);
 }
