ок все шо э на ранок 8 квытня

--- a/white/css/a_style.css
+++ b/white/css/a_style.css
@@ -33,42 +33,44 @@
    }
 :not(a):after,:not(a):before,:not(br):after,:not(br):before,:not(img):after,:not(img):before,:not(span):after,:not(span):before{content:" ";display:block;width:100%;height:0;clear:both}
 a:after,a:before,table:after,table:before,tr:after,tr:before,td:after,td:before,br:after,br:before,img:after,img:before,span:after,span:before{content:none}
-.wrap{position:relative;margin:0 auto;max-width: 414px;width:100%;height:100%;z-index: 2;text-align: center;}
+.wrap{position:relative;margin:0 auto;max-width:980px;width:100%;height:100%;z-index: 2;text-align: center;}
 .clear{clear:both}
-.section,section{width:100%;overflow:hidden;position:relative;z-index: 1;min-width: 414px;}
+.section,section{width:100%;overflow:hidden;position:relative;z-index: 1;min-width:980px;}
 h1,h2,h3,h4,h5{font-size:1em;font-weight:inherit;text-align:center}
 body{font-family: 'proxima';font-weight: 400;letter-spacing: 0.027em;}
 a{text-decoration:none;color:inherit;outline:0!important}
 
 #maket {
     width: 100%;
-    height: 837px;
-    background: url(../img/maketm.jpg) no-repeat center top;
+    height: 719px;
+    background: url(../img/maket2.jpg) no-repeat center top;
     opacity: 0.4;
     position: absolute;
     top: 0;
-    z-index: 14;
+    z-index: 5;
     left: 0;
 }
 
 .block {
-    background: #1b1b1b;
+    /* background: url(../img/bg_bg.png)no-repeat bottom -368px right -261px #1b1b1b; */
     position: relative;
     width: 100%;
-    /* height: 837px; */
-    /* height: 100vh; */
-    margin-top: -1px;
+    /* min-height: 719px; */
+    height: 440px;
+    padding-top: 50px;
 }
 .block header {
-    /* position: absolute; */
-    margin-top: 12.4%;
+    position: relative;
+    top: 9.1%;
     width: 100%;
+    transform: translateY(-50%);
 }
 .logo {
     background: url(../img/logo.png)no-repeat top center;
     width: 218px;
     height: 44px;
-    display: inline-block;
+    margin-left: 7px;
+    float: left;
 }
 
 .left {
@@ -79,7 +81,7 @@ a{text-decoration:none;color:inherit;outline:0!important}
     float: right;
 }
 
-.oprs {
+.opros {
     color: #00b1f7;
     font-size: 20px;
     font-weight: 400;
@@ -88,10 +90,9 @@ a{text-decoration:none;color:inherit;outline:0!important}
     text-align: right;
     float: right;
     position: relative;
-    letter-spacing: 0px
-    
+    letter-spacing: 0px;
 }
-.oprs :after{
+.opros :after{
     content: "";
     width: 100%;
     height: 4px;
@@ -99,31 +100,92 @@ a{text-decoration:none;color:inherit;outline:0!important}
     top: 35px;
     position: absolute;
 }
-.oprs span {
+.opros span:not(#step-data) {
     display: block;
     margin-top: 22px;
     font-size: 22px;
     letter-spacing: 0.1px
 }
+.sec.disactive{
+    transform: translateX(-100%)!important;
+}
+.fact.disactive{
+    transform: translateY(100%)!important;
+}
+
 .block .sec {
-    /* position: absolute; */
-    margin-top: 10%;
+    position: absolute;
+    top: 0;
     width: 100%;
+    height: 320px;
+    z-index: -1;
+    opacity: 0;
+    transition: all 0.35s ease-in-out;
+    transform: translateX(100%);
+}
+.etaps{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 320px;
+    left: 0;
+    z-index: -1;
+    opacity: 0;
+    transition: all 0.35s ease-in-out;
+    transform: translateY(100%);
+}
+.etap[data-etap="0"]{
+    transform: translateX(0);
+    opacity: 1;
+}
+.etap{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 320px;
+    left: 0;
+    z-index: -1;
+    opacity: 0;
+    transition: all 0.35s ease-in-out;
+    transform: translateX(100%);
+}
+.etap.active{
+    transform: translateX(0);
+    opacity: 1;
+}
+.etap.disactive{
+    transform: translateX(-100%);
+}
+.etaps.active{
+    transform: translateY(0);
+    opacity: 1;
+}
+.etaps[data-etap="1"] .line .point{
+    margin-left: 0;
+}
+.etaps[data-etap="2"] .line .point{
+    margin-left: 392.5px;
+}
+.etaps[data-etap="3"] .line .point{
+    margin-left: 785px;
+}
+.etaps.disactive{
+    transform: translateY(-100%);
 }
 .sec {
     background: white;
     min-height: 250px;
     position: relative;
-    -webkit-box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 1);
+    /* -webkit-box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 1); */
     -moz-box-shadow:    0px 0px 10px 0px rgba(50, 50, 50, 1);
-    box-shadow:         0px 0px 10px 0px rgba(50, 50, 50, 1);
-    padding: 23px 0px 58px 0px;
+    /* box-shadow:         0px 0px 10px 0px rgba(50, 50, 50, 1); */
+    padding: 20px 33px;
 }
 .block .sec_n {
-    /* position: absolute; */
-    margin-top: 10%;
+    position: absolute;
+    top: 20.8%;
     width: 100%;
-    margin-top: 61px;
+    margin-top: 61px
 }
 .sec_n {
     background: white;
@@ -132,41 +194,83 @@ a{text-decoration:none;color:inherit;outline:0!important}
     -webkit-box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 1);
     -moz-box-shadow:    0px 0px 10px 0px rgba(50, 50, 50, 1);
     box-shadow:         0px 0px 10px 0px rgba(50, 50, 50, 1);
-    padding: 23px 0px 58px 0px;
+    padding:  33px
 }
-.sec:after {
+#opros-wrap[data-step="1"]:before{width:12.5%}
+#opros-wrap[data-step="2"]:before{width:25%}
+#opros-wrap[data-step="3"]:before{width:37.5%}
+#opros-wrap[data-step="4"]:before{width:50%}
+#opros-wrap[data-step="5"]:before{width:62.5%}
+#opros-wrap[data-step="6"]:before{width:75%}
+#opros-wrap[data-step="7"]:before{width: 87.5%;}
+#opros-wrap[data-step="8"]:before{width:100%}
+#opros-wrap:before {
     content: "";
-    width: 112px;
+    /* width: 135px; */
     height: 4px;
-    background: #60c7f9;
+    background: #2D5187;
     position: absolute;
-    top: 0px;
+    bottom: 0px;
     left: 0px;
+    z-index: 2;
+    transition: all 0.35s ease-in-out;
+}
+.facts{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+}
+.fact{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 320px;
+    z-index: -1;
+    opacity: 0;
+    transition: all 0.35s ease-in-out;
+    transform: translateY(-100%);
+}
+.sec[data-step="8"] h2:not(.fo){
+    min-height: initial;
+}
+.et.fixed{
+    margin-top: 0;
 }
 .sec h2 {
-    font-size: 20px;
+    font-size: 26px;
     color: black;
-    margin-top: 11px;
-    line-height: 28px;
+    margin-top: 20px;
+    line-height: 34px;
     letter-spacing: 0.1px;
-    min-height: 68px;
-    padding: 0px 20px;
+    /* min-height: 68px; */
+    padding: 0px 40px;
+}
+.etap .et{
+    opacity: 0;
+    margin-bottom: 21px;
 }
 .sec_n h2 {
-    font-size: 22px;
+    font-size: 26px;
     color: black;
-    margin-top: 11px;
-    line-height: 31px;
+    margin-top: 42px;
+    line-height: 34px;
     letter-spacing: 0.1px;
-    min-height: 58px;
-    padding: 0px 20px;
+    min-height: 68px;
+    padding: 0px 40px
 }
 .btn_gr {
     text-align: center;
     font-size: 0;
     word-spacing: 4px;
-    margin-top: 28px;
+    margin-top: 20px;
     margin-bottom: 30px;
+    position: absolute;
+    left: 0;
+    padding: 0 25px;
+    /* bottom: 10px; */
+    width: 100%;
 }
 .btn_gr a{
     border: 5px solid #00abff;
@@ -175,43 +279,47 @@ a{text-decoration:none;color:inherit;outline:0!important}
     box-shadow:         0px 0px 10px 0px rgba(50, 50, 50, 0.5);
     display: inline-block;
     width: 305px;
-    height: 70px;
-    margin: 4px;
+    height: 75px;
+    margin: 5px;
     word-spacing: 0px;
     color: black;
     font-size: 20px;
     font-weight: 700;
-    line-height: 59px;
+    line-height: 68px;
     letter-spacing: 0px;
     box-sizing: border-box;
     vertical-align: top;
+    transition: color 0.25s, background 0.25s;
 }
 .btn_gr a:hover{
     background: url(../img/bg_btn.png)no-repeat top center;
     background-size: cover;
     color: white;
-    border: none;
-    line-height: 76px;
-    
+    border: 0px solid transparent;
+    line-height: 78px;
+}
+.back:hover{
+    color: #00B1F7;
 }
 .back {
     text-transform: uppercase;
     color: #cdcdcd;
     position: absolute;
-    bottom: 36px;
-    font-size: 17px;
-    left: 50%;
-    margin-left: -31px;
+    bottom: 25px;
+    font-size: 18px;
+    left: 32px;
+    transition: all 0.25s;
+    /* left: 50%; */
 }
 .block footer{
-    /* position: absolute; */
-    margin-top: 7.8%;
+    position: absolute;
+    bottom: 4.5%;
     width: 100%;
-    padding-bottom: 30px;
+    transform: translateY(50%);
 }
 footer p {
     color: #525252;
-    font-size: 14px;
+    font-size: 16px;
     text-align: center;
     letter-spacing: 0px;
 }
@@ -220,8 +328,8 @@ footer p {
 }
 
 .fak {
-    margin-top: 34px!important;
-    line-height: 32px!important
+    margin-top: 20px!important;
+    line-height: 28px!important;
 }
 .sec h2 span {
     font-weight: 700;
@@ -231,8 +339,7 @@ footer p {
     font-weight: 300;
     font-size: 18px;
     margin-top: 20px;
-    padding: 10px 60px;
-    
+    padding: 0px 60px;
 }
 .sec_n h2 span {
     font-weight: 700;
@@ -241,49 +348,47 @@ footer p {
     text-align: center;
     font-weight: 300;
     font-size: 18px;
-    padding: 0px 30px;
-    margin-top: 8px;
+    padding: 10px 60px;
+
 }
 .re {
     font-weight: 400!important;
 }
 
 .et {
-    margin-top: 23px!important;
-    margin-bottom: -18px
+    /* margin-top: 23px!important; */
+    margin-bottom: -18px;
 }
 
 .et_l {
-    /* float: left; */
-    /* width: 490px; */
-    /* margin-left: 99px; */
-    text-align: center;
+    float: left;
+    width: 490px;
+    margin-left: 99px;
 }
 
 .et_r {
-    /* float: left; */
-    /* width: 200px; */
-    width: 100%;
+    float: left;
+    width: 200px;
 }
 .et_l p{
-    font-size: 22px;
+    font-size: 24px;
     color: black;
-    /* text-align: left; */
-    padding: 0px 19px;
+    text-align: left;
+    padding: 0;
 }
 .et_r p{
     font-size: 24px;
     color: black;
-    /* text-align: left; */
+    text-align: left;
     padding: 0px;
-    display: inline-block;
-    margin-left: 20px;
 }
 .line {
     background: url(../img/line.png)no-repeat center;
     display: inline-block;
-    width: 100%;
+    width: 836px;
     cursor: pointer;
+    position: relative;
+    top: 44px;
 }
 
 .point {
@@ -291,18 +396,19 @@ footer p {
     width: 51px;
     height: 51px;
     cursor: pointer;
+    transition: all 0.35s;
 }
 .et_l h3 {
     color: #00b1f7;
     font-size: 24px;
-    /* text-align: left; */
+    text-align: left;
     margin-top: 16px;
-    letter-spacing: 0px;
+    letter-spacing: 0px
 }
 
 .etp {
     font-size: 16px!important;
-    /* padding-right: 48px!important; */
+    padding-right: 48px!important;
     margin-top: 9px!important;
     letter-spacing: 0.0px;
     line-height: 19px;
@@ -315,7 +421,7 @@ footer p {
     color: #00b1f7!important;
     font-size: 21px!important;
     padding-left: 39px!important;
-    letter-spacing: 0.0px;
+    letter-spacing: 0.0px
 }
 
 .rub {
@@ -346,7 +452,7 @@ footer p {
     line-height: 26px!important;
 }
 .pp {
-    /* padding: 0px 1px!important; */
+    padding: 0px 0px!important;
     line-height: 24px;
 }
 
@@ -360,9 +466,10 @@ form {
     text-align: center;
 }
 form input {
-    background: url(../img/input.png)no-repeat center;
+    background: #fff url(../img/input.png)no-repeat center;
     width: 255px;
     height: 81px;
+    transition: all 0.25s;
     outline: none;
     border: none;
     display: inline-block;
@@ -372,6 +479,9 @@ form input {
     color:black;
     text-align: center;
     padding: 0px 15px;
+}
+.error-input{
+    background: #FFD6D6 url(../img/input.png)no-repeat center;
 }
 form button{
     border: 5px solid #00abff;
@@ -391,6 +501,7 @@ form button{
     box-sizing: border-box;
     vertical-align: top;
     background: white;
+    transition: color 0.25s, background 0.25s;
 }
 form button:hover{
     background: url(../img/bg_btn.png)no-repeat top center;
@@ -426,4 +537,157 @@ form button:hover{
     color: #b5b5b5;
     margin-top: 27px!important;
     margin-bottom: 54px;
+}
+
+.sec_opr {
+    background: #f0f0f0;
+    position: relative;
+    width: 100%;
+    min-height: 719px;
+    padding-top: 109px;
+}
+
+.yan_dir {
+    background: url(../img/lin_f.png)no-repeat bottom -1px left white;
+    min-height: 315px;
+    position: relative;
+    -webkit-box-shadow: 0px 0px 20px 0px rgba(50, 50, 50, 0.5);
+    -moz-box-shadow:    0px 0px 20px 0px rgba(50, 50, 50, 0.5);
+    box-shadow:         0px 0px 20px 0px rgba(50, 50, 50, 0.5);
+    width: 100%;
+    /* margin-top: 109px; */
+    border-radius: 10px;
+    padding-top: 0px;
+    padding-top: 81px;
+}
+.yan_dir h2 {
+    font-size: 32px;
+    color: black;
+    line-height: 33px;
+    letter-spacing: -0.3px;
+    /* min-height: 68px; */
+    /* padding: 0px 40px; */
+    border-radius: 10px;
+}
+    
+.btna_gr {
+    margin-top: 10px;
+    font-size: 0;
+    word-spacing: 25px;
+    margin-top: 20px;
+    padding: 0 40px;
+}
+.btna_gr a {
+    width: 285px;
+    height: 53px;
+    border-radius: 30px;
+    border: 5px solid #f1d56f;
+    display: inline-block;
+    font-size: 19px;
+    line-height: 44px;
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 0.5);
+    -moz-box-shadow:    0px 0px 10px 0px rgba(50, 50, 50, 0.5);
+    box-shadow:         0px 0px 10px 0px rgba(50, 50, 50, 0.5);
+    vertical-align: top;
+    word-spacing: normal;
+    margin: 5px;
+    transition: background 0.25s, color 0.25s;
+}
+.btna_gr a:hover {
+    color: white;
+    background: url(../img/btn_h.png)no-repeat center;
+    background-size: cover;
+    border: none;
+    line-height: 44px;
+    padding: 5px;
+}
+.re.do{
+    line-height: 20px!important;
+}
+.bak {
+    background: url(../img/back.png)no-repeat left;
+    min-height: 17px;
+    color: #cdcdcd;
+    font-size: 17px;
+    position: absolute;
+    bottom: 21px;
+    left: 27px;
+    padding-left: 15px;
+}
+
+.kr_op {
+    font-size: 15px;
+    color: #c4c4c4;
+    margin-top: 29px
+}
+.sec.active{
+    opacity: 1;
+    z-index: 1;
+    transform: translateX(0);
+}
+.fact.active{
+    opacity: 1;
+    z-index: 1;
+    transform: translateY(0);
+}
+.fins[data-fins="1"]{
+    padding-top: 90px;
+}
+.fins[data-fins="2"]{
+    padding-top: 60px;
+}
+.fins.active{
+    opacity: 1;
+    z-index: 1;
+    transform: translateY(0);
+}
+.fins.disactive{
+    transform: translateY(100%);
+}
+.fins{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 320px;
+    z-index: -1;
+    opacity: 0;
+    left: 0;
+    transition: all 0.35s ease-in-out;
+    transform: translateY(-100%);
+}
+.okgo.active{
+    transform: translateY(0);
+    opacity: 1;
+}
+.okgo{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 400px;
+    z-index: -1;
+    opacity: 0;
+    padding-top: 140px;
+    left: 0;
+    transition: all 0.35s ease-in-out;
+    transform: translateY(100%);
+}
+#opros-wrap{
+    height: 320px;
+    width: 100%;
+    background: rgb(255, 255, 255);
+    overflow: hidden;
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 1);
+    -moz-box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 1);
+    box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 1);
+    min-height: 315px;
+    position: relative;
+    -webkit-box-shadow: 0px 0px 20px 0px rgba(50, 50, 50, 0.5);
+    -moz-box-shadow: 0px 0px 20px 0px rgba(50, 50, 50, 0.5);
+    box-shadow: 0px 0px 20px 0px rgba(50, 50, 50, 0.5);
+    width: 100%;
+    /* margin-top: 109px; */
+    border-radius: 10px;
+    overflow: hidden;
+    padding-top: 0px;
+    /* margin-top: 40px; */
 }
