--- a/mobile/css/a_style.css
+++ b/mobile/css/a_style.css
@@ -55,12 +55,12 @@ a{text-decoration:none;color:inherit;outline:0!important}
     background: url(../img/bg_bg.png)no-repeat bottom -368px right -261px #1b1b1b;
     position: relative;
     width: 100%;
-    /* min-height: 719px; */
+    min-height: 736px;
     height: 100vh;
 }
 .block header {
     position: relative;
-    top: 9.1%;
+    top: 6.1%;
     width: 100%;
     -webkit-transform: translateY(-50%);
         -ms-transform: translateY(-50%);
@@ -70,8 +70,8 @@ a{text-decoration:none;color:inherit;outline:0!important}
     background: url(../img/logo.png)no-repeat top center;
     width: 218px;
     height: 44px;
-    margin-left: 7px;
-    float: left;
+    /* margin-left: 7px; */
+    /* float: left; */
 }
 
 .left {
@@ -122,7 +122,7 @@ a{text-decoration:none;color:inherit;outline:0!important}
     position: absolute;
     top: 0;
     width: 100%;
-    height: 400px;
+    height: inherit;
     z-index: -1;
     opacity: 0;
     -webkit-transition: all 0.35s ease-in-out;
@@ -135,7 +135,7 @@ a{text-decoration:none;color:inherit;outline:0!important}
     position: absolute;
     top: 0;
     width: 100%;
-    height: 400px;
+    height: inherit;
     left: 0;
     z-index: -1;
     opacity: 0;
@@ -155,7 +155,7 @@ a{text-decoration:none;color:inherit;outline:0!important}
     position: absolute;
     top: 0;
     width: 100%;
-    height: 400px;
+    height: inherit;
     left: 0;
     z-index: -1;
     opacity: 0;
@@ -186,10 +186,10 @@ a{text-decoration:none;color:inherit;outline:0!important}
     margin-left: 0;
 }
 .etaps[data-etap="2"] .line .point{
-    margin-left: 392.5px;
+    margin-left: 181.5px;
 }
 .etaps[data-etap="3"] .line .point{
-    margin-left: 785px;
+    margin-left: 363px;
 }
 .etaps.disactive{
     -webkit-transform: translateY(-100%);
@@ -250,7 +250,7 @@ a{text-decoration:none;color:inherit;outline:0!important}
     position: absolute;
     top: 0;
     width: 100%;
-    height: 400px;
+    height: inherit;
     z-index: -1;
     opacity: 0;
     -webkit-transition: all 0.35s ease-in-out;
@@ -263,13 +263,13 @@ a{text-decoration:none;color:inherit;outline:0!important}
     min-height: initial;
 }
 .sec h2 {
-    font-size: 26px;
-    color: black;
-    margin-top: 20px;
-    line-height: 34px;
-    letter-spacing: 0.1px;
-    min-height: 68px;
-    padding: 0px 40px;
+    /* font-size: 26px; */
+    /* color: black; */
+    /* margin-top: 20px; */
+    /* line-height: 34px; */
+    /* letter-spacing: 0.1px; */
+    /* min-height: 68px; */
+    /* padding: 0px 40px; */
 }
 .etap .et{
     opacity: 0;
@@ -339,7 +339,7 @@ a{text-decoration:none;color:inherit;outline:0!important}
 }
 .block footer{
     position: absolute;
-    bottom: 4.5%;
+    bottom: 2.7%;
     width: 100%;
     -webkit-transform: translateY(50%);
         -ms-transform: translateY(50%);
@@ -356,19 +356,18 @@ footer p {
 }
 
 .fak {
-    margin-top: 34px!important;
-    line-height: 32px!important
+    /* margin-top: 34px!important; */
+    /* line-height: 32px!important; */
 }
 .sec h2 span {
     font-weight: 700;
 }
 .sec p {
-    text-align: center;
-    font-weight: 300;
-    font-size: 18px;
-    margin-top: 20px;
-    padding: 10px 60px;
-    
+    /* text-align: center; */
+    /* font-weight: 300; */
+    /* font-size: 18px; */
+    /* margin-top: 20px; */
+    /* padding: 10px 60px; */
 }
 .sec_n h2 span {
     font-weight: 700;
@@ -385,14 +384,14 @@ footer p {
 }
 
 .et {
-    margin-top: 23px!important;
-    margin-bottom: -18px
+    /* margin-top: 23px!important; */
+    /* margin-bottom: -18px; */
 }
 
 .et_l {
-    float: left;
-    width: 490px;
-    margin-left: 99px;
+    /* float: left; */
+    /* width: 490px; */
+    /* margin-left: 99px; */
 }
 
 .et_r {
@@ -400,24 +399,24 @@ footer p {
     width: 200px;
 }
 .et_l p{
-    font-size: 24px;
-    color: black;
-    text-align: left;
-    padding: 0;
+    /* font-size: 24px; */
+    /* color: black; */
+    /* text-align: left; */
+    /* padding: 0; */
 }
 .et_r p{
-    font-size: 24px;
-    color: black;
-    text-align: left;
-    padding: 0px;
+    /* font-size: 24px; */
+    /* color: black; */
+    /* text-align: left; */
+    /* padding: 0px; */
 }
 .line {
-    background: url(../img/line.png)no-repeat center;
-    display: inline-block;
-    width: 836px;
-    cursor: pointer;
+    /* background: url(../img/line.png)no-repeat center; */
+    /* display: inline-block; */
+    /* width: 836px; */
+    /* cursor: pointer; */
     position: relative;
-    top: 82px;
+    top: 77px;
 }
 
 .point {
@@ -429,19 +428,19 @@ footer p {
     transition: all 0.35s;
 }
 .et_l h3 {
-    color: #00b1f7;
-    font-size: 24px;
-    text-align: left;
-    margin-top: 16px;
-    letter-spacing: 0px
+    /* color: #00b1f7; */
+    /* font-size: 24px; */
+    /* text-align: left; */
+    /* margin-top: 16px; */
+    /* letter-spacing: 0px; */
 }
 
 .etp {
-    font-size: 16px!important;
-    padding-right: 48px!important;
-    margin-top: 9px!important;
-    letter-spacing: 0.0px;
-    line-height: 19px;
+    /* font-size: 16px!important; */
+    /* padding-right: 48px!important; */
+    /* margin-top: 9px!important; */
+    /* letter-spacing: 0.0px; */
+    /* line-height: 19px; */
 }
 
 .time {
@@ -482,7 +481,7 @@ footer p {
     line-height: 26px!important;
 }
 .pp {
-    padding: 0px 0px!important;
+    /* padding: 0px 0px!important; */
     line-height: 24px;
 }
 
@@ -682,7 +681,7 @@ form button:hover{
     position: absolute;
     top: 0;
     width: 100%;
-    height: 400px;
+    height: inherit;
     z-index: -1;
     opacity: 0;
     left: 0;
@@ -702,7 +701,7 @@ form button:hover{
     position: absolute;
     top: 0;
     width: 100%;
-    height: 400px;
+    height: inherit;
     z-index: -1;
     opacity: 0;
     padding-top: 140px;
@@ -714,7 +713,7 @@ form button:hover{
             transform: translateY(100%);
 }
 #opros-wrap{
-    height: 400px;
+    height: 600px;
     position: absolute;
     top: 54%;
     -webkit-transform: translateY(-50%);
