--- a/landing/mobile/css/a_style.css
+++ b/landing/mobile/css/a_style.css
@@ -49,8 +49,8 @@ a{text-decoration:none;color:inherit;outline:0!important}
 .facts{height:100%;left:0}
 .fact{height:inherit;z-index:-1;opacity:0;-webkit-transition:all .35s ease-in-out;transition:all .35s ease-in-out;-webkit-transform:translateY(-100%);-ms-transform:translateY(-100%);transform:translateY(-100%)}
 .sec[data-step="8"] h2:not(.fo){min-height:initial}
-.etap .et{opacity:0;margin-bottom:30px}
-.btn_gr{left:0;padding:0 25px}
+.etap .et{opacity:0;margin-bottom: -10px;}
+.btn_gr{left:0;padding: 0 10px;}
 .btn_gr a:not(.site-link),.site-link-btn{border:5px solid #00abff;-webkit-box-shadow:0 0 10px 0 rgba(50,50,50,.5);box-shadow:0 0 10px 0 rgba(50,50,50,.5);display:inline-block;width:305px;height:75px;margin:5px;word-spacing:0;color:#000;font-size:20px;font-weight:700;line-height:68px;letter-spacing:0;-webkit-box-sizing:border-box;box-sizing:border-box;vertical-align:top;-webkit-transition:color .25s,background .25s;transition:color .25s,background .25s}
 .btn_gr a:not(.site-link):hover,.site-link-btn:hover{background:url(../img/bg_btn.png) top center no-repeat;background-size:cover;color:#fff;border:0 solid transparent;line-height:78px}
 .back:hover{color:#00B1F7}
@@ -72,7 +72,7 @@ form button{-webkit-transition:color .25s,background .25s;transition:color .25s,
 .kr_op{font-size:15px;color:#c4c4c4;margin-top:29px}
 .sec.active{opacity:1;z-index:1;-webkit-transform:translateX(0);-ms-transform:translateX(0);transform:translateX(0)}
 .fact.active{z-index:1;-webkit-transform:translateY(0);-ms-transform:translateY(0);transform:translateY(0)}
-.fins[data-fins="3"],.fins[data-fins="4"],.fins[data-fins="1"]{padding-top:130px}
+.fins[data-fins="3"],.fins[data-fins="4"],.fins[data-fins="1"]{padding-top: 135px;}
 .fins[data-fins="2"]{padding-top:60px}
 .fins.active{opacity:1;z-index:1;-webkit-transform:translateY(0);-ms-transform:translateY(0);transform:translateY(0)}
 .fins,.okgo{top:0;width:100%;height:inherit;z-index:-1;left:0;position:absolute}
