--- a/landing/mobile/css/a_style.css
+++ b/landing/mobile/css/a_style.css
@@ -106,6 +106,9 @@ a{text-decoration:none;color:inherit;outline:0!important}
 .sec_n{background:#fff;min-height:250px;position:relative;-webkit-box-shadow:0 0 10px 0 rgba(50,50,50,1);box-shadow:0 0 10px 0 rgba(50,50,50,1);padding:23px 0 58px}
 .back,.next{position:absolute}
 .sec h2{font-size:20px;line-height:28px;min-height:68px;padding:0 20px}
+.starts h2{
+    margin-top: 60px;
+}
 .sec[data-step="5"] h2{padding:35px 0 0;text-align:left}
 .btn_gr,.sec p,footer p{text-align:center}
 .sec_n h2{font-size:22px;line-height:31px;min-height:58px;padding:0 20px}
